# osi-utilities

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CODEOWNERS  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-and-test.yml  lint.yml  spdx_check.yml  ubuntu.yml
doc/: Doxyfile.in
examples/: CMakeLists.txt  convert_osi2mcap.cpp  example_mcap_reader.cpp  example_mcap_writer.cpp  example_native_binary_reader.cpp  example_native_binary_writer.cpp  example_text_reader.cpp  example_txth_reader.cpp  example_txth_writer.cpp
include/osi-utilities/tracefile/: MCAPTraceFileWriter.h  NativeBinaryTraceFileReader.h  Reader.h  TextTraceFileReader.h  Writer.h
include/osi-utilities/tracefile/reader/: MCAPTraceFileReader.h  NativeBinaryTraceFileReader.h  txthTraceFileReader.h
include/osi-utilities/tracefile/writer/: MCAPTraceFileWriter.h  NativeBinaryTraceFileWriter.h  txthTraceFileWriter.h
src/: CMakeLists.txt
src/tracefile/: MCAPImplementation.cpp  MCAPTraceFileWriter.cpp  NativeBinaryTraceFileReader.cpp  Reader.cpp  TextTraceFileReader.cpp  Writer.cpp
src/tracefile/reader/: MCAPTraceFileReader.cpp  NativeBinaryTraceFileReader.cpp  Reader.cpp  txthTraceFileReader.cpp
src/tracefile/writer/: MCAPTraceFileWriter.cpp  NativeBinaryTraceFileWriter.cpp  Writer.cpp  txthTraceFileWriter.cpp
tests/: CMakeLists.txt
tests/src/tracefile/: NativeBinaryTraceFileReader_test.cpp
tests/src/tracefile/reader/: NativeBinaryTraceFileReader_test.cpp  txthTraceFileReader_test.cpp
tests/src/tracefile/writer/: MCAPTraceFileWriter_test.cpp  NativeBinaryTraceFileWriter_test.cpp
